MDEV-22351 RESET MASTER should be propagated to InnoDB

Ever since commit 947efe17ed8188ca4feef6deb0c2831a246b5c8f
InnoDB no longer writes binlog position in one place.
It will not at all be written to the TRX_SYS page, and
instead it will be written to the undo log header page that
changes the transaction state.

ha_reset_master(), trx_rseg_reset_binlog_pos(): Reset the
binlog information in InnoDB when RESET MASTER is invoked.

reset_master(): Invoke ha_reset_master() to discard the
information in InnoDB.